--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body style="background:url(../../../../assets/images/fondos/freepiks/cloth-569222_1280.jpg) no-repeat; background-size: 100%; background-position: 0%; background-attachment: fixed">
+<body style="background:url(assets/images/fondos/freepiks/cloth-569222_1280.jpg) no-repeat; background-size: 100%; background-position: 0%; background-attachment: fixed">
   <app-root></app-root>
 </body>
 </html>
